# ntop

./: .gitignore  CLAUDE.md  Cargo.toml  README.ko.md  README.md
docs/: 00-business-model.html  00-business-model.md  01-service-plan.html  01-service-plan.md  02-market-competition.html  02-market-competition.md  03-personas.html  03-personas.md  10-prd.html  10-prd.md  11-user-stories.html  11-user-stories.md  12-ia.html  12-ia.md  13-user-flows.html  13-user-flows.md  20-wireframes.html  20-wireframes.md  21-screen-spec.html  21-screen-spec.md  30-functional-spec.html  30-functional-spec.md  31-erd.html  31-erd.md  32-api-spec.html  32-api-spec.md  33-policy.html  33-policy.md  40-backlog.html  40-backlog.md  41-qa-testcases.html  41-qa-testcases.md  INDEX.md  index.html  overview.html
docs/_harness/: HANDOFF.md  _html-base.css  codebase-facts.md  critique-final-r2.md  critique-final.md  critique-research.md  generator_report_fix1.md  generator_report_g1a.md  generator_report_g1b.md  generator_report_g2b.md  generator_report_g3.md  generator_report_g4a.md  generator_report_g4b.md  generator_report_g5.md  generator_report_s1.md  generator_report_s2.md  generator_report_s3.md  research-s1.md  research-s2.md  research-s3.md  spec.md  sprint-playbook.md
docs/superpowers/plans/: 2026-05-07-nsm-implementation.md  2026-06-07-multi-runtime-server-monitoring.md
docs/superpowers/specs/: 2026-05-07-nsm-design.md  2026-05-17-nuxtjs-full-support-design.md  (+2 more)
src/: cli.rs  config.rs  lib.rs  main.rs
src/log/: mod.rs  streamer.rs
src/process/: framework.rs  framework_rules.rs  killer.rs  mod.rs  network.rs  platform.rs  scanner.rs  tree.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/tui/widgets/: detail_panel.rs  mod.rs  (+10 more)
tests/: cli_test.rs  config_test.rs  filter_test.rs  framework_test.rs  killer_test.rs  log_test.rs  network_test.rs  scanner_test.rs  tree_test.rs  types_test.rs
