[package]
name = "nsm"
version = "0.1.0"
edition = "2021"
description = "Node Server Manager - TUI tool for monitoring and managing Node.js/Next.js processes"
license = "MIT"

[[bin]]
name = "nsm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
nix = { version = "0.29", features = ["signal", "process"] }
notify = "7"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
csv = "1"
chrono = "0.4"
unicode-width = "0.2"
glob = "0.3"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
