[package]
name = "ntop"
version = "0.3.1"
edition = "2021"
description = "Node Top - TUI tool for monitoring and managing Node.js/Next.js/Nuxt.js processes"
license = "MIT"
repository = "https://github.com/greeun/ntop"
keywords = ["node", "process", "tui", "monitor", "nuxt"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ntop"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
notify = "7"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
csv = "1"
chrono = "0.4"
unicode-width = "0.2"
glob = "0.3"
anyhow = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
